fix(avo-1076): reduce heading font sizes on mobile in content pages

--- a/src/styles/pages/admin/_content-pages-preview.scss
+++ b/src/styles/pages/admin/_content-pages-preview.scss
@@ -12,6 +12,34 @@ $l-container-padding-xs: 2rem;
 		width: auto;
 	}
 
+	// Mobile titles
+
+	@include respond-to("md") {
+		h1 {
+			font-size: 4rem;
+		}
+
+		h2 {
+			font-size: 3rem;
+		}
+
+		h3 {
+			font-size: 2.6rem;
+		}
+
+		h4 {
+			font-size: 2.3rem;
+		}
+
+		h5 {
+			font-size: 2rem;
+		}
+
+		h6 {
+			font-size: 1.6rem;
+		}
+	}
+
 	// accordion
 
 	.c-accordion {
